<resources>
    <string name="app_name">RadioButtonExperiment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Radio Button Experiment</string>
    <string name="nav_header_subtitle">Pick a Radio Button</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_unstyled_radio_button">Unstyled Radio Button</string>
    <string name="menu_styled_radio_button">Styled Radio Button</string>
    <string name="menu_styled_drawable_radio_button">Drawable Radio Button</string>
    <string name="menu_programmatic_radio_button">Programmatic Radio Button</string>
    <string name="menu_custom_radio_button">Custom Radio Button</string>
    <string name="menu_custom_radio_group">Custom Radio Group</string>

    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>

    <string name="apply">Apply</string>

</resources>