<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_unstyled_radio_button"
            android:icon="@drawable/ic_baseline_looks_one_24"
            android:title="@string/menu_unstyled_radio_button" />

        <item
            android:id="@+id/nav_styled_radio_button"
            android:icon="@drawable/ic_baseline_looks_two_24"
            android:title="@string/menu_styled_radio_button" />
        <item
            android:id="@+id/nav_drawable_radio_button"
            android:icon="@drawable/ic_baseline_looks_three_24"
            android:title="@string/menu_styled_drawable_radio_button" />
        <item
            android:id="@+id/nav_custom_radio_button"
            android:icon="@drawable/ic_baseline_looks_four_24"
            android:title="@string/menu_custom_radio_button" />

        <item
            android:id="@+id/nav_custom_radio_group"
            android:icon="@drawable/ic_baseline_looks_five_24"
            android:title="@string/menu_custom_radio_group" />
    </group>
</menu>