<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.defaultradiobutton.DefaultRadioButtonFragment">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroupColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.VanillaRadioButton"
            android:text="@string/black" />

        <RadioButton
            android:id="@+id/radioButtonRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.VanillaRadioButton"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/radioButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.VanillaRadioButton"
            android:text="@string/blue" />

        <RadioButton
            android:id="@+id/radioButtonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.VanillaRadioButton"
            android:text="@string/green" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonApplyColor"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintStart_toStartOf="@id/radioGroupColors"
        app:layout_constraintTop_toBottomOf="@id/radioGroupColors" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/buttonApplyColor"
        app:layout_constraintTop_toBottomOf="@id/buttonApplyColor"
        tools:ignore="RtlCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>